@@ -24,9 +24,6 @@ distributions {
 
 def extraJvmArgs = [
         '-server',
-        '-XX:+UseG1GC',
-        '-XX:MaxGCPauseMillis=100',
-        '-XX:+UseStringDeduplication',
         '-XshowSettings:vm',
 ]
 
@@ -38,19 +35,46 @@ if (!hasProperty('excludeHotspotImpl')) {
     dependencies {
         runtimeOnly project(':hotspot-impl')
     }
-    extraJvmArgs += ['--add-opens', 'java.management/sun.management=ALL-UNNAMED']
+    extraJvmArgs += ['--add-exports', 'java.management/sun.management=ALL-UNNAMED']
 }
 
-if (hasProperty('devCerts')) {
+if (!hasProperty('excludeClockImpl')) {
+    dependencies {
+        runtimeOnly project(':clock-impl')
+    }
+    extraJvmArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
+}
+
+if (hasProperty('devCerts') || hasProperty('devMTLS')) {
     extraJvmArgs += [
             '-Dhttp.port=8443',
             '-Dssl.identity.type=privatekey',
-            '-Dssl.identity.certChainPath=../dev-certs/ca.crt',
-            '-Dssl.identity.privateKeyPath=../dev-certs/key.pem']
+            '-Dssl.identity.certChainPath=../dev-certs/server.chain.crt',
+            '-Dssl.identity.privateKeyPath=../dev-certs/server.key',
+    ]
+    if (hasProperty('devMTLS')) {
+        extraJvmArgs += [
+                '-Dssl.trust.type=certs',
+                '-Dssl.trust.path=../dev-certs/ca.crt',
+                '-Dssl.clientAuthentication=NEEDED',
+        ]
+    }
 }
 
 if (hasProperty('debug')) {
     extraJvmArgs += ['-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005']
+}
+
+if (hasProperty('debugAutocomplete')) {
+    extraJvmArgs += ['-Ddeephaven.console.autocomplete.quiet=false']
+}
+
+if (hasProperty('gcApplication')) {
+    extraJvmArgs += ['-Dio.deephaven.app.GcApplication.enabled=true']
+}
+
+if (hasProperty('quiet')) {
+    extraJvmArgs += ['-Ddeephaven.quiet=true']
 }
 
 tasks.withType(JavaExec).configureEach {
